--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 body {
   position: relative;
   font-family:'Poppins', sans-serif;
-  background: var(--fifthColor);
+  background: var(--primaryColor);
   color: var(--primaryColor);
 }
 
